alignment for header fixed

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -4,24 +4,30 @@
   background-color: #0a192f;
   width: 100%;
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   box-shadow: 1px 1px 1px 1px rgb(128, 128, 128);
 }
 
-.header > div {
+.nav-item :hover {
+  background-color: rgb(255, 255, 0);
+  transition: background-color 1s;
+}
+
+.nav-item {
   padding: 1rem;
+}
+
+.nav-container {
+  display: flex;
+  flex-direction: row;
 }
 
 a {
   text-decoration: none;
   color: inherit;
 }
+
 #nav-badge {
-  position:absolute;
-  top:0;
-  left:0;
+  padding: 1rem;
   color: rgb(25, 187, 3);
-}
-.header :hover {
-  background-color: rgb(255, 255, 0);
 }
